--- a/app/views/parks/edit.html.erb
+++ b/app/views/parks/edit.html.erb
@@ -1,9 +1,23 @@
 <div class="contents">
 
-  <h1>Editing Park</h1>
+  <h1>Edit <%=@park.name%> </h1>
 
-  <div class='form'>
-    <%= render 'form', park: @park %>
+  <div style='display:flex'>
+
+    <% if @park.latitude %>
+      <div class= 'map-container' style="height:500px; min-width:400px;">
+        <div id="map" style = "height: 100%; width: 100%; display: flex">
+          <span style='width: 400px; align-self: center; text-align: center'>
+            Loading map...
+          </span>
+        </div>
+      </div >
+    <% end %>
+
+    <div class='form'>
+      <%= render 'form', park: @park %>
+    </div>
+
   </div>
 
 </div>
